Updated docs to 2.4

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       The <b>Scala</b> language is supported since <b>1.7</b> version of the tool.
       
       <p/>
+      <b>Java 9</b> is supported since <b>2.4</b> version of the tool.
+      
+      <p/>
       The tool is a core of the <a href='https://abi-laboratory.pro/java/tracker/'>Java API Tracker</a> project.
 
 <table class='summary'><tr><td>
@@ -101,7 +104,7 @@
 
 <a name="License"></a>
 <h2>License</h2>
-<p>This program is free software. You may use, redistribute and/or modify it under the terms of the <a href="http://www.gnu.org/licenses/">GNU GPL</a> or <a href="http://www.gnu.org/licenses/">GNU LGPL</a></p>
+<p>This program is free software. You may use, redistribute and/or modify it under the terms of the <a href="http://www.gnu.org/licenses/">GNU LGPL</a></p>
 
 <a name="Supported_Platforms"></a>
 <h2>Supported Platforms</h2>
@@ -447,13 +450,16 @@ You can find changelog <a href='Changelog.html'>here</a>.
 
 <ul>
     <li>
-        <a href='http://wiki.eclipse.org/Evolving_Java-based_APIs_2'>“Evolving Java-based APIs: Achieving API Binary Compatibility”</a>, Jim des Rivières 
+        <a href='http://wiki.eclipse.org/Evolving_Java-based_APIs_2'>“Evolving Java-based APIs: Achieving API Binary Compatibility”</a>, Jim des Rivières
     </li>
     <li>
         <a href='http://docs.oracle.com/javase/specs/jls/se8/html/jls-13.html'>“Binary Compatibility”</a>, Java Language Specification
     </li>
     <li>
-        <a href='https://blogs.oracle.com/darcy/entry/kinds_of_compatibility'> “Kinds of Compatibility: Source, Binary, and Behavioral”</a>, Joseph D. Darcy's Oracle Weblog 
+        <a href='http://danamlund.dk/backwards_compatibility_with_java_bytecode_editing.html'> “Backwards compatibility with Java bytecode editing”</a>, Dan Amlund Thomsen
+    </li>
+    <li>
+        <a href='https://blogs.oracle.com/darcy/entry/kinds_of_compatibility'> “Kinds of Compatibility: Source, Binary, and Behavioral”</a>, Joseph D. Darcy's Oracle Weblog
     </li>
 </ul>
 
